# LojbanChatBot

./: .gitignore  Main.hs  README.md  hsbracket.c  install.sh  opencog-lojbantoatoms.cabal  run.sh  stack.yaml  tags
Lib/OpenCog/: Lojban.hs
Lib/OpenCog/Lojban/: Parser.hs  State.hs  SuReal.hs  Util.hs
Test/: Main.hs
app/: Main.hs  tags
src/OpenCog/: Lojban.hs
