name:                opencog-lojbantoatoms
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/githubuser/new-template#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2010 Author Here
category:            Parser
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:    Lib
  exposed-modules:   OpenCog.Lojban
  other-modules:     OpenCog.Lojban.Util
                     , OpenCog.Lojban.State
                     , OpenCog.Lojban.Parser
                     , OpenCog.Lojban.SuReal
  build-depends:     base
                     , opencog-atomspace
                     , transformers
                     , tersmu
                     , random
                     , containers
  default-language:    Haskell2010
  c-sources:         hsbracket.c
  ghc-options:       -dynamic -shared -fPIC

executable lojbanToAtoms
  main-is:             Main.hs
  build-depends:       base
                     , opencog-atomspace
                     , transformers
  default-language:    Haskell2010

Test-Suite lojban-test
  hs-source-dirs:      Test
  main-is:             Main.hs
  type:                exitcode-stdio-1.0
  build-depends:       base
                     , opencog-atomspace
                     , tasty
                     , tasty-hunit
  default-language:    Haskell2010
